Sun, 19 Mar 2006 18:38:42 +0100 <thp@perli.net>
	+ Applied another patch from A. Tauch (stripHTML enhancements)

Sun, 19 Mar 2006 15:11:32 +0100 <thp@perli.net>
	+ Applied two patches from A. Tauch <contrib@maisondubonheur.com>:
	* fix for local db writer's encoding -> is now really iso-8859-1)
	* fixed race condition bug which made some episodes to disappear

Sat, 04 Mar 2006 21:36:56 +0100 <thp@perli.net>
	+ Added channel info + general/advanced tabs to channel editor
	+ Added channel info/edit button to gPodder main window view
	+ Added episode info dialog + open on double-click (available list)
	* Fixed getPodcastFilename (returned wrong value)
	+ Added Adrien Beaucreux to list of authors/contributors
	+ Added Tooltips object + tooltip for info/edit button
	* Fixed addDownloadedItem (getChannelIndexFiles doesn't exist anymore)
	* Removed URL display in gPodder main window channel combobox
	* Updated TODO-List

Fri, 03 Mar 2006 20:59:17 +0100 <thp@perli.net>
	* Applied patch from informancer@web.de (see below)
	- Reverted to old-style channel properties dialog for now
	* Changed debug output to only output when debugging ;)

Sun, 26 Feb 2006 00:11:28 +0100 <thp@perli.net>
	* Bumped version number and date in bin/gpodder
	* Updated TODO-List
	* Strip html inside <description> tags (Reported by Leo Gomez)

Sat, 25 Fen 2006 12:00:00 +0100 <informancer@web.de>
	* Added download dir field to channel property window
	* Changed save/load of channel.xml to use download dir
	* Added download_dir as a property of podcastChannel
	* moved chan properties from gPodderLib to podcastChannel
	* merged configChannel in podcastChannel

Sat, 04 Feb 2006 19:07:33 +0100 <thp@perli.net> 
	* ** gPodder version 0.5 is here! **
	+ Added "downloaded episodes" tab
	+ Added "liblocaldb" for abstraction of readLocalDB
	* Fixed version to 0.5
	* Small clean-ups
	* Updated TODO-List

Sat, 04 Feb 2006 11:54:55 +0100 <thp@perli.net>
	* Bumped up version number and date in bin/gpodder
