@@ -5,8 +5,6 @@
 
   == 0.6 or afterwards ==
  
- * the possibility to delete old podcasts (philippe.archambault@uniroma1.it)
-
  * viewing pod info such as pubdate/description
    would've been nice.. It would give a better over view on your
    downloaded episodes.   (suggested by mattias@hedenskog.se)
