@@ -15,10 +15,19 @@ import codecs
 
 from datetime import datetime
 
+import libgpodder
+
 class writeLocalDB( object):
     ofile = None
     
-    def __init__( self, filename, channel):
+    def __init__( self, filename, channel, delete_if_empty = True):
+        if delete_if_empty and len( channel.items) == 0:
+            if libgpodder.isDebugging():
+                print "Seems like there is no item left in this localDB channel"
+                print "Deleting channel index file of empty local channel.."
+            libgpodder.gPodderLib().deleteFilename( filename)
+            return
+        
         self.ofile = codecs.open( filename, "w", 'iso-8859-1', 'replace')
 	self.ofile.write( '<?xml version="1.0" encoding="ISO-8859-1"?>'+"\n")
 	self.ofile.write( '<!-- local download database, generated by gPodder -->'+"\n")
