@@ -1,3 +1,8 @@
+Fri, 24 Mar 2006 19:34:21 +0100 <thp@perli.net>
+	+ Applied yet another patch from Alain (delete downloaded podcasts)
+	* Delete empty local db index.xml files when no items left
+	* Updated TODO list
+
 Sun, 19 Mar 2006 18:38:42 +0100 <thp@perli.net>
 	+ Applied another patch from A. Tauch (stripHTML enhancements)
 
